fix: realign about page content
fix: adjust media query for frame page heading

fix: revert css change

fix: update about page CSS

--- a/components/css/buckyless/frame.less
+++ b/components/css/buckyless/frame.less
@@ -94,7 +94,7 @@ frame-page {
         bottom: 2px;
       }
 
-      @media (max-width: @xs) {
+      @media (min-width: @sm) {
         font-size: 22px;
 
         .material-icons {
